--- a/Simulation.html
+++ b/Simulation.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8">
     <title>Monty Hall Problem Simulation</title>
+
+    <!-- My JS Files! -->
     <script src="./Model/MH_Class.js"></script>
     <script src="./Model/Door.js"></script>
 
+    <!-- jquery via Google CDN -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+
+    <!-- Latest compiled and minified Boostrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <!-- Mobile Frendly Bootstrap -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
   </head>
   <body>
+    <h1> Monty Hall Problem Simulation </h1>
+
+
+
 
   </body>
 </html>
